--- a/changelog.org
+++ b/changelog.org
@@ -1,6 +1,16 @@
 #+STARTUP: nofold
 
 * Changelog
+** 2.13.0 [2020-06-16 Tue]
+Refactoring codebase for the sake of consistency.
+
+*** Documentation
+- Revised code comments
+
+*** Improved
+- All color variables now use theme color variables
+- Re-arranged things around for people using =Lite= version
+
 ** 2.12.0 [2020-06-12 Fri]
 Porting more features and polishing colors.
 
