--- a/changelog.org
+++ b/changelog.org
@@ -3,17 +3,17 @@
 * Changelog
 ** 3.0.0-rc.1 [2020-08-01 Sat]
 This is the first pre-release of ~v3~ that ports the remaining of missing features
-and improves/fixed some of the leftover bugs.
+and improves/fixes some of the leftover bugs.
 
-In a week time, I'll publish the ~v3.0.0~ that will break some custom options for
-the sake of more consistant naming scheme, so keep in mind that you'll have to
-re-do your customizations in the configuration menu once the update it lands.
+In a week's time, I'll publish the ~v3.0.0~ that will reset some custom options
+for the sake of more consistant naming scheme, so keep in mind that you'll have
+to re-do your customizations in the configuration menu once the update lands.
 
 If there are some bugs with recently ported options, do let me know!
 
 *** Added
 - Ported all variants for 'tail styles' option
-- Ported all extra tweaks for =fb-like= tail style
+- Ported all extra tweaks for =fb-like= tail style (preview in =v2.7.0= section)
 - Ported options for incoming/outgoing message bubble sides
 - Ported options for 'blurred images/videos' feature
 
