--- a/changelog.org
+++ b/changelog.org
@@ -1,6 +1,41 @@
 #+STARTUP: nofold
 
 * Changelog
+** 3.0.0 [2020-09-03 Thu]
+The =v3= release is here! It took around 3 months to get here, and a ton of work.
+
+There are no deprecated features and there is a new one to adjust syntax color
+tones. For full list, look for /added/ sections the previous releases.
+
+Overall, I'm quite happy with how everything turned out — especially the
+=whatsapp.sh= tool. Huge thanks to everyone who contributed, and to [[https://github.com/E-RELevant/][Erel]] for
+helping out a ton behind the scenes.
+
+Erel also made a [[https://github.com/E-RELevant/WhatsApp-Web-Skeleton][WA Skeleton]] theme that can be used as a "screenshot mode" of
+sorts — which will hide all sensitive information — and you can use it to
+showcase your DWA theme in [[https://github.com/vednoc/dark-whatsapp/issues/178][this issue]] to show everyone how you use it.
+
+Finally, I wrote a blog post that highlights this update. You can [[https://vednoc.me/blog/next-gen-of-dark-whatsapp][read it here]].
+
+*** Build
+- Added brand new options to the [[https://github.com/vednoc/dark-whatsapp/blob/master/whatsapp.sh][whatsapp.sh]] utility
+  - You can now compile custom DWA with UserCSS options outside of the browser!
+
+*** Docs
+- Updated UserCSS options and code comments
+- Updated screenshot image
+
+*** Added
+- Tertiary, or syntax colors, are now a part of the color generator
+
+*** Improved
+- Added a better generation for shadow color variable
+- Switched to a more vibrant version of accent color for scrollbar thumbs
+
+*** Fixed
+- Updated a few regressions introduced when refactoring syntax color variables
+- Updated colors for prev/next item in media viewer
+
 ** 3.0.0-rc.7 [2020-08-27 Thu]
 Not many changes in this release; just updating styles to WhatsApp `v2.2035.12`
 update, and adding an announcement for my new project --- [[https://userstyles.world/][UserStyles.World]] ---
